crates/rattler_repodata_gateway/src/sparse/snapshots/rattler_repodata_gateway__sparse__test__package_format_selection@all.snap
---
source: crates/rattler_repodata_gateway/src/sparse/mod.rs
expression: "records.join(\"\\n\")"
---
bors-1.0-bla_1.tar.bz2
bors-1.1-bla_1.conda
bors-1.1-bla_1.tar.bz2
bors-1.2.1-bla_1.tar.bz2
bors-2.0-bla_1.tar.bz2
bors-2.1-bla_1.conda
bors-2.1-bla_1.tar.bz2
